<resources>
    <string name="app_name">TextDetection</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="data_found">%1$s found</string>
    <string name="give_up">Give up automatic reading</string>
    <string name="birth_date_format">dd/MM/yyyy</string>

    <!-- Labels -->
    <string name="cpf">CPF</string>
    <string name="name">Name</string>
    <string name="birth_date">Birth date</string>
</resources>